--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -18,7 +18,11 @@ Ci-dessous, quelques éléments d'analyse des données.
 
 ![](projet1_files/figure-html/cell-2-output-2.png){fig-align="center" width="800px"}
 
-Les données de la TaM n'étant pas parfaites, les données sont incomplètes.
+:::{.wide-text}
+Ces graphiques illustrent l'évolution quotidienne du nombre total de trajets entre 2021 et 2024. 
+
+On observe une tendance générale à l'augmentation des trajets au printemps et en été, suivie d'une diminution en hiver, probablement en raison des conditions météorologiques. Les graphiques font également ressortir des lacunes dans les données fournies par la TaM, qui semblent incomplètes. 
+:::
 
 ## Comparaison des trajets journaliers entre les années.
 
@@ -32,8 +36,11 @@ Les données de la TaM n'étant pas parfaites, les données sont incomplètes.
 <iframe src="projet1_files/figure-html/graphique_distance_jour_2024.html" width="100%" class="crop-bottom" height="600"></iframe>
 </div>
 
-On remarque que les différents graphes ont globalement la même forme.
+:::{.wide-text}
+Ces graphiques représentent une comparaison des trajets journaliers sur les quatre mêmes années, visualisés sous forme de diagrammes radar, chaque graphique montre les habitudes de déplacement pour chaque jour de la semaine, réparties sur une horloge de 24 heures. 
 
+On observe des pics d'activité le matin et le soir, correspondant probablement aux trajets domicile-travail. Bien que les profils soient globalement similaires entre les années, de légères fluctuations sont visibles, indiquant un changement dans les comportements de déplacement ou les besoins de mobilité au fil des années. 
+:::
 
 
 
