--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -7,16 +7,18 @@ execute:
 
 Ci-dessous, quelques éléments d'analyse des données.
 
-## Nombres totaux de trajets des différentes années depuis 2020.
+## Nombre total de trajets des différentes années depuis 2020.
 
 
-![](projet1_files/figure-html/Nb_trajet_par_2021.png){fig-align="center" width="800px"}
+<div style="display: flex; justify-content: space-around; align-items: center; margin-bottom: 20px;">
+  <img src="projet1_files/figure-html/Nb_trajet_par_2021.png" style="width: 48%; height: auto;">
+  <img src="projet1_files/figure-html/Nb_trajet_par_2022.png" style="width: 48%; height: auto;">
+</div>
 
-![](projet1_files/figure-html/Nb_trajet_par_2022.png){fig-align="center" width="800px"}
-
-![](projet1_files/figure-html/Nb_trajet_par_2023.png){fig-align="center" width="800px"}
-
-![](projet1_files/figure-html/Nb_trajet_par_2024.png){fig-align="center" width="800px"}
+<div style="display: flex; justify-content: space-around; align-items: center;">
+  <img src="projet1_files/figure-html/Nb_trajet_par_2023.png" style="width: 48%; height: auto;">
+  <img src="projet1_files/figure-html/Nb_trajet_par_2024.png" style="width: 48%; height: auto;">
+</div>
 
 :::{.wide-text}
 Ces graphiques illustrent l'évolution quotidienne du nombre total de trajets entre 2021 et 2024. 
@@ -37,10 +39,20 @@ On observe une tendance générale à l'augmentation des trajets au printemps et
 </div>
 
 :::{.wide-text}
-Ces graphiques représentent une comparaison des trajets journaliers sur les quatre mêmes années, visualisés sous forme de diagrammes radar, chaque graphique montre les habitudes de déplacement pour chaque jour de la semaine, réparties sur une horloge de 24 heures. 
+Ces graphiques représentent une comparaison des trajets journaliers sur les quatre mêmes années, visualisés sous forme de diagrammes circulaires. Chaque graphique montre les habitudes de déplacement pour chaque jour de la semaine, réparties sur une horloge de 24 heures. 
 
 On observe des pics d'activité le matin et le soir, correspondant probablement aux trajets domicile-travail. Bien que les profils soient globalement similaires entre les années, de légères fluctuations sont visibles, indiquant un changement dans les comportements de déplacement ou les besoins de mobilité au fil des années. 
 :::
 
+## Nombre de kilomètre moyen et station les populaires.
 
+<div style="display: flex; justify-content: space-around; gap: 20px;">
+  <img src="projet1_files/figure-html/StationStat.png" alt="Station Stat" style="width: 48%; height: auto;">
+  <img src="projet1_files/figure-html/Distance_par_mois_2021_2024.png" alt="Distance par mois 2021-2024" style="width: 48%; height: auto;">
+</div>
 
+:::{.wide-text}
+Ces deux graphiques permettent plusieurs interprétations. Le premier illustre les stations de retour les plus populaires, c’est-à-dire celles où les cyclistes se rendent le plus fréquemment. On constate que la station 'Boutonnet' est en tête, suivie de près par la station 'Place Albert 1er - St Charles'.
+
+Le second graphique présente l’évolution de la distance moyenne parcourue par cycliste au fil des années. On remarque un pic chaque année au mois de mai (généralement lié au retour du soleil), ainsi qu’une tendance à la baisse en fin d’année. De plus, cette tendance semble se répéter de manière similaire au cours des quatre années étudiées.
+:::
