--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -44,7 +44,7 @@ Ces graphiques représentent une comparaison des trajets journaliers sur les qua
 On observe des pics d'activité le matin et le soir, correspondant probablement aux trajets domicile-travail. Bien que les profils soient globalement similaires entre les années, de légères fluctuations sont visibles, indiquant un changement dans les comportements de déplacement ou les besoins de mobilité au fil des années. 
 :::
 
-## Nombre de kilomètre moyen et station les populaires.
+## Distance moyenne parcourue et stations les plus populaires.
 
 <div style="display: flex; justify-content: space-around; gap: 20px;">
   <img src="projet1_files/figure-html/StationStat.png" alt="Station Stat" style="width: 48%; height: auto;">
