--- a/docs/projet2.qmd
+++ b/docs/projet2.qmd
@@ -1,14 +1,13 @@
 ---
-title: Cartes
+title: Visualisation cartographique
 format: html
-execute:
-  enabled: false
-  echo: false
-  warning: false
-jupyter: python3
 ---
 
 ## Carte interactive des trajets
+
+:::{.wide-text}
+Découvrez ci-dessous notre application, développée avec Shiny, qui offre une interface intuitive pour visualiser les trajets qui ont été effectués par les usagers au cours de l'année 2024.
+:::
 
 <iframe src="https://cyclevision3map.shinyapps.io/shiny_app/" width="100%" height="600px" frameborder="0"></iframe>
 
@@ -16,6 +15,10 @@ L'application Shiny est en ligne ici : [Accéder à l'application Shiny](https:/
 
 
 ## Cartes prévisionnelles 
+
+:::{.wide-text}
+Voici d'autres cartes présentant des prévisions des stations les plus fréquentés et des trajets les plus effectués pour chaque jour et chaque heure de la semaine. Ces résultats ont été obtenus en calculant des moyennes à partir des données présentées sur la page d'accueil.
+:::
 
 <body> 
     <!-- Carte des intensités -->
